@@ -169,15 +169,6 @@
   </build>
   <profiles>
     <profile>
-      <id>jdk9or10</id>
-      <activation>
-        <jdk>[9,)</jdk>
-      </activation>
-      <properties>
-        <purplepip.jvm.args>--add-modules java.xml.bind</purplepip.jvm.args>
-      </properties>
-    </profile>
-    <profile>
       <id>debug</id>
       <properties>
         <jvm.properties.debug>-Xdebug -Xrunjdwp:transport=dt_socket,server=n,address=relax:5005,suspend=y</jvm.properties.debug>
